--- a/index.html
+++ b/index.html
@@ -41,28 +41,28 @@
                 <h1>Learn from the best of industry!</h1>
                 <p>Highest in quality, affordable in price.<br>Digital entrepreneurs, Youtubers and Content creators provide Affordable Courses across Technologies.</p>
                 <a href="https://github.com/iamkabilash" target="_blank"><div class="btn-git">
-                    <img src="./assets/play-icon.png" alt="">
                     <p>Explore Courses</p>
+                    <img src="./assets/right-arrow-explore.png" alt="">
                 </div></a>
                 <div class="div-stat">
                     <div><h2>“Pure Hardwork, No Shortcuts!”</h2></div>
                     <div class="stats">
                         <div class="stat">
-                            <div><img src="./assets/play-icon.png" alt=""></div>
+                            <div><img src="./assets/online-learning.png" alt=""></div>
                             <div class="stat-text">
                                 <h1>400+</h1>
                                 <h3>Different Courses</h3>
                             </div>
                         </div>
                         <div class="stat">
-                            <div><img src="./assets/play-icon.png" alt=""></div>
+                            <div><img src="./assets/graduated.png" alt=""></div>
                             <div class="stat-text">
                                 <h1>400,000+</h1>
                                 <h3>Students Enrolled</h3>
                             </div>
                         </div>
                         <div class="stat">
-                            <div><img src="./assets/play-icon.png" alt=""></div>
+                            <div><img src="./assets/goal.png" alt=""></div>
                             <div class="stat-text">
                                 <h1>10,000+</h1>
                                 <h3>Successful Transition</h3>
@@ -378,85 +378,95 @@
         <div class="hall-of-fame">
             <div><h2>Hall of Fame</h2></div>
             <div class="halls">
-                <div class="hall">
-                    <img src="./assets/hall/shri.jpeg" alt="">
-                    <h3>Shrivatsa G</h3>
-                    <h4>Trainee Software Developer, ECOLAB</h4>
-                    <p>A few days back I was scheduled for an interview at ECOLABS. Thanks to Naveen Reddy sir and his wonderful Youtube channel./p>
+                <div class="fame-arrow" id="left-arrow">
+                    <img src="./assets/left-arrow.png" alt="">
                 </div>
-                <div class="hall">
+                <div class="hall-ia-ia" id="fame-left">
+                    <img src="./assets/hall/shri.jpeg" alt="">
+                    <div class="hall-img">
+                        <h3>Shrivatsa G</h3>
+                        <img src="./assets/linkedin.png" alt="" class="hall-linkedin">
+                    </div>
+                    <div class="hall-text">
+                        <h4>Trainee Software Developer, ECOLAB.</h4>
+                        <p>A few days back I was scheduled for an interview at ECOLABS. Thanks to Naveen Reddy sir.</p>
+                    </div>
+                </div>
+                <div class="hall-ia" id="fame-left">
                     <img src="./assets/hall/sameer.jpeg" alt="">
-                    <h3>Sameer Kumar</h3>
-                    <h4>Bajaj Finserv, Data Scientist</h4>
-                    <p>Hello everyone, My name is Sameer Kumar and I am a final year B.Tech student from Symbiosis Institute of Technology, Pune./p>
+                    <div class="hall-img">
+                        <h3>Sameer Kumar</h3>
+                        <img src="./assets/linkedin.png" alt="" class="hall-linkedin">
+                    </div>
+                    <div class="hall-text">
+                        <h4>Bajaj Finserv, Data Scientist.</h4>
+                        <p>Hello everyone, My name is Sameer Kumar and I am a final year B.Tech student from Symbiosis Institute of Technology, Pune.</p>
+                    </div>
                 </div>
                 <div class="hall">
                     <img src="./assets/hall/jay.jpeg" alt="">
-                    <h3>Jay Prakash Bind</h3>
-                    <h4>Program Associate, Wells Fargo</h4>
-                    <p>I recently get placed in Wells Fargo for the position of Program Associate on 20 LPA package./p>
+                    <div class="hall-img">
+                        <h3>Jay Prakash Bind</h3>
+                        <img src="./assets/linkedin.png" alt="" class="hall-linkedin">
+                    </div>
+                    <div class="hall-text">
+                        <h4>Program Associate, Wells Fargo.</h4>
+                        <p>I recently get placed in Wells Fargo for the position of Program Associate on 20 LPA package.</p>
+                    </div>
                 </div>
-                <div class="hall">
+                <div class="hall-ia" id="fame-right">
                     <img src="./assets/hall/aakash.jpeg" alt="">
-                    <h3>Aakash B</h3>
-                    <h4>Software Development Engineer 1, Amazon</h4>
-                    <p>I learnt Machine Learning and Deep Learning from him. I learnt basics of big data from Sudhanshu sir./p>
+                    <div class="hall-img">
+                        <h3>Aakash B</h3>
+                        <img src="./assets/linkedin.png" alt="" class="hall-linkedin">
+                    </div>
+                    <div class="hall-text">
+                        <h4>Software Development Engineer 1, Amazon.</h4>
+                        <p>I learnt Machine Learning and Deep Learning from him. I learnt basics of big data from Sudhanshu sir.</p>
+                    </div>
                 </div>
-                <div class="hall">
+                <div class="hall-ia-ia" id="fame-right">
                     <img src="./assets/hall/chitra.jpeg" alt="">
-                    <h3>Chitra Patgar</h3>
-                    <h4>Programmer Analyst, Cognizant</h4>
-                    <p>I have enrolled for your ML course two years back , Python you taught in that course was awesome./p>
+                    <div class="hall-img">
+                        <h3>Chitra Patgar</h3>
+                        <img src="./assets/linkedin.png" alt="" class="hall-linkedin">
+                    </div>
+                    <div class="hall-text">
+                    <h4>Programmer Analyst, Cognizant.</h4>
+                    <p>I have enrolled for your ML course two years back , Python you taught in that course was awesome.</p>
+                    </div>
+                </div>
+                <div class="fame-arrow" id="right-arrow">
+                    <img src="./assets/arrow-right.png" alt="">
                 </div>
             </div>
         </div>    
     </section>
     <div class="section-space"></div>
+    <div class="footer-line"></div>
     <footer>
-        <div class="products">
-            <div class="product">
-                <img src="" alt="">
-                <h3>Job Portal</h3>
-                <p>Use exceptional templates for a stand-out resume minus the sign up process.</p>
+        <div class="footer-main">
+            <div class="footer-logo-div">
+                <img src="./assets/ineuron-logo.png" alt="footer-logo" id="footer-logo">
             </div>
-            <div class="product">
-                <img src="" alt="">
-                <h3>Internship Portal</h3>
-                <p>iNeuron's self-paced internship portal prioritises hands-on training with 570+ internship projects.</p>
+            <div class="address">
+                <img src="./assets/location.png" alt="location-icon">
+                <p class="address-text">17th Floor Tower A, Brigade Signature Towers<br>Sannatammanahalli,<br>Bengaluru, Karnataka 562129.</p>
             </div>
-            <div class="product">
-                <img src="" alt="">
-                <h3>Become an Affiliate</h3>
-                <p>Explore affiliate marketing opportunities with iNeuron and attain financial frredom.</p>
-            </div>
-            <div class="product">
-                <img src="" alt="">
-                <h3>Hall of Fame</h3>
-                <p>Our student placements and 10+ career transitions speak volumes about our courses.</p>
-            </div>
-            <div class="product">
-                <img src="" alt="">
-                <h3>InBlog</h3>
-                <p>Explore all you want about your favourite courses.</p>
+            <div class="email">
+                <img src="./assets/email.png" alt="email-icon">
+                <p class="email-text"><strong>Email us: </strong>contact@ineuron.ai</p>
             </div>
         </div>
-        <div class="footer">
-            <div class="footer-main">
-                <div class="footer-logo-div">
-                    <img src="" alt="footer-logo">
-                    <img src="" alt="iso-9001">
-                </div>
-                <div class="address">
-                    <img src="" alt="location-icon">
-                    <p class="address-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, accusantium.</p>
-                </div>
-                <div class="email">
-                    <img src="" alt="email-icon">
-                    <p class="email-text">Email us: contact@ineuron.ai</p>
+        <div class="footer-float-right">
+            <div class="footer-head footer-company footer-iso">
+                <div><h2>ISO 9001<br>Certified</h2></div>
+                <div class="footer-links">
+                    <img src="./assets/iso-9001-2015.svg" alt="iso-9001" id="iso-9001">
                 </div>
             </div>
-            <div class="footer-company">
-                <div class="h2">Company</div>
+            <div class="footer-head footer-company">
+                <div><h2>Company</h2></div>
                 <div class="footer-links">
                     <a href=""><p>Hack-A-Thon</p></a>
                     <a href=""><p>Job Guarantee</p></a>
@@ -464,8 +474,17 @@
                     <a href=""><p>Job Assistance</p></a>
                 </div>
             </div>
-            <div class="footer-contact">
-                <div class="h2">Contact</div>
+            <div class="footer-head footer-products">
+                <div><h2>Our Products</h2></div>
+                <div class="footer-links">
+                    <a href=""><p>Job Portal</p></a>
+                    <a href=""><p>Internship Portal</p></a>
+                    <a href=""><p>Become an Affiliate</p></a>
+                    <a href=""><p>InBlog</p></a>
+                </div>
+            </div>
+            <div class="footer-head footer-contact">
+                <div><h2>Contact</h2></div>
                 <div class="footer-links">
                     <a href=""><p>FAQs</p></a>
                     <a href=""><p>About Us</p></a>
@@ -473,18 +492,18 @@
                     <a href=""><p>Terms and Conditions</p></a>
                 </div>
             </div>
-            <div class="footer-social">
-                <div class="h2">Follow Us</div>
+            <div class="footer-head footer-social">
+                <div><h2>Follow Us</h2></div>
                 <div class="footer-links">
-                    <a href=""><img src="" alt=""><p>LinkedIn</p></a>
-                    <a href=""><img src="" alt=""><p>YouTube</p></a>
-                    <a href=""><img src="" alt=""><p>Twitter</p></a>
-                    <a href=""><img src="" alt=""><p>Facebook</p></a>
+                    <a href=""><img src="./assets/linkedin.png" alt=""><p>LinkedIn</p></a>
+                    <a href=""><img src="./assets/youtube.png" alt=""><p>YouTube</p></a>
+                    <a href=""><img src="./assets/twitter.png" alt=""><p>Twitter</p></a>
+                    <a href=""><img src="./assets/facebook.png" alt=""><p>Facebook</p></a>
                 </div>
             </div>
         </div>
     </footer>
-    <div class="div-help">
+    <!-- <div class="div-help">
         <div>
             <h3>Need help?</h3>
         </div>
@@ -492,6 +511,6 @@
             <p>Speak to us!</p>
             <img src="./assets/support-icon.png" alt="">
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
