design features completed

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>iNeuron | Affordable & Competent Courses</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
-            <a class="nav-item nav-link" href="#" id="course-nav">Courses
+            <a class="nav-item nav-link" href="https://ineuron.ai/courses" id="course-nav" target="_blank">Courses
                 <!-- <div class="course-container">
                     <p>course</p>
                     <p>course</p>
@@ -24,12 +25,12 @@
                     <p>course</p>
                 </div> -->
             </a>
-            <a class="nav-item nav-link" href="#">One Neuron</a>
-            <a class="nav-item nav-link" href="#">Job Portal</a>
-            <a class="nav-item nav-link" href="#">Internship Portal</a>
-            <a class="nav-item nav-link" href="#">Hall of Fame</a>
-            <a class="nav-item nav-link" href="#">Blog</a>
-            <a class="nav-item nav-link" href="#">Hack-A-Thon</a>
+            <a class="nav-item nav-link" href="https://ineuron.ai/one-neuron" target="_blank">One Neuron</a>
+            <a class="nav-item nav-link" href="https://jobs.ineuron.ai/" target="_blank">Job Portal</a>
+            <a class="nav-item nav-link" href="https://internship.ineuron.ai/" target="_blank">Internship Portal</a>
+            <a class="nav-item nav-link" href="https://halloffame.ineuron.ai/" target="_blank">Hall of Fame</a>
+            <a class="nav-item nav-link" href="https://blog.ineuron.ai/" target="_blank">Blog</a>
+            <a class="nav-item nav-link" href="https://hackathon.ineuron.ai/neo" target="_blank">Hack-A-Thon</a>
             <a class="nav-item nav-link" href="#"><input type="text" placeholder="What are we learning today?"></a>
             <a class="nav-item" href="" target="_blank"><button class="btn-primary">Login / Register</button></a>
         </nav>
@@ -40,7 +41,7 @@
             <div class="header-left">
                 <h1>Learn from the best of industry!</h1>
                 <p>Highest in quality, affordable in price.<br>Digital entrepreneurs, Youtubers and Content creators provide Affordable Courses across Technologies.</p>
-                <a href="https://github.com/iamkabilash" target="_blank"><div class="btn-git">
+                <a href="https://ineuron.ai/courses" target="_blank"><div class="btn-git">
                     <p>Explore Courses</p>
                     <img src="./assets/right-arrow-explore.png" alt="">
                 </div></a>
@@ -88,31 +89,31 @@
             </div>
             <div class="courses-ia" id="course-ia-left">
                 <div class="course-group-ia">
-                    <h3>Our Top Courses</h3>
-                    <p>Explore our Popular courses.</p>
+                    <h3>Community Courses</h3>
+                    <p>Open to all pro-live classes on Youtube for free.</p>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/fsjs.webp" alt="">
+                    <img src="./assets/courses/community-1.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>FullStack Javascript Web Developer Bootcamp</h4>
+                        <h4>Build an E-Commerce with ReactJS</h4>
                         <p>Hitesh Choudhary</p>
-                        <h5>₹17,700</h5>
+                        <h5>Free</h5>
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/fsds.jpeg" alt="">
+                    <img src="./assets/courses/community-2.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>FullStack Data Science Bootcamp</h4>
-                        <p>Krish Naik</p>
-                        <h5>₹17,700</h5>
+                        <h4>Publishing Custom Cocoapads</h4>
+                        <p>Hitesh Choudhary</p>
+                        <h5>Free</h5>
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/62bf3edd6960793aeb3c0dbb.jpg" alt="">
+                    <img src="./assets/courses/community-3.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>Job Guarantee Big Data Bootcamp</h4>
-                        <p>Sudhanshu Kumar</p>
-                        <h5>₹17,700</h5>
+                        <h4>Write Quicker HTML and CSS3</h4>
+                        <p>Hitesh Choudhary</p>
+                        <h5>Free</h5>
                     </div>
                 </div>
             </div>
@@ -148,31 +149,31 @@
             </div>
             <div class="courses-ia" id="course-ia-right">
                 <div class="course-group-ia">
-                    <h3>Our Top Courses</h3>
-                    <p>Explore our Popular courses.</p>
+                    <h3>Affordable Programs</h3>
+                    <p>Find your favourite courses in pocket-friendly ways.</p>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/fsjs.webp" alt="">
+                    <img src="./assets/courses/affordable-1.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>FullStack Javascript Web Developer Bootcamp</h4>
+                        <h4>Mastering DSA with Java</h4>
                         <p>Hitesh Choudhary</p>
-                        <h5>₹17,700</h5>
+                        <h5>₹499</h5>
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/fsds.jpeg" alt="">
+                    <img src="./assets/courses/affordable-2.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>FullStack Data Science Bootcamp</h4>
+                        <h4>Mastering DSA with C++</h4>
                         <p>Krish Naik</p>
-                        <h5>₹17,700</h5>
+                        <h5>₹499</h5>
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/62bf3edd6960793aeb3c0dbb.jpg" alt="">
+                    <img src="./assets/courses/affordable-3.jpg" alt="">
                     <div class="course-text-ia">
-                        <h4>Job Guarantee Big Data Bootcamp</h4>
+                        <h4>FullStack Django Developer</h4>
                         <p>Sudhanshu Kumar</p>
-                        <h5>₹17,700</h5>
+                        <h5>₹499</h5>
                     </div>
                 </div>
             </div>
@@ -215,7 +216,7 @@
                 <div class="place-company"><img src="./assets/placement-companies/wipro.png" alt=""></div>
                 <div class="place-company"><img src="./assets/placement-companies/wissen.png" alt=""></div>
                 <div class="place-company"><img src="./assets/placement-companies/zensar.png" alt=""></div>
-                <div class="place-company"><h3>and more...</h3></div>
+                <div class="place-company"><img src="./assets/arrow-right.png" alt="" id="company-more"></div>
             </div>
         </div>
         <div class="div-institutions">
@@ -226,7 +227,7 @@
                 <div class="institution"><img src="./assets/colleges/malnad-college.svg" alt=""></div>
                 <div class="institution"><img src="./assets/colleges/taxila.svg" alt=""></div>
                 <div class="institution"><img src="./assets/colleges/vit.svg" alt=""></div>
-                <div class="institution"><h3>and more...</h3></div>
+                <div class="institution"><img src="./assets/arrow-right.png" alt="" id="college-more"></div>
             </div>
         </div>
     </section>
@@ -451,7 +452,7 @@
             </div>
             <div class="address">
                 <img src="./assets/location.png" alt="location-icon">
-                <p class="address-text">17th Floor Tower A, Brigade Signature Towers<br>Sannatammanahalli,<br>Bengaluru, Karnataka 562129.</p>
+                <p class="address-text">17th Floor Tower A, Brigade Signature Towers, Sannatammanahalli,<br>Bengaluru, Karnataka 562129.</p>
             </div>
             <div class="email">
                 <img src="./assets/email.png" alt="email-icon">
@@ -503,7 +504,7 @@
             </div>
         </div>
     </footer>
-    <!-- <div class="div-help">
+    <div class="div-help">
         <div>
             <h3>Need help?</h3>
         </div>
@@ -511,6 +512,6 @@
             <p>Speak to us!</p>
             <img src="./assets/support-icon.png" alt="">
         </div>
-    </div> -->
+    </div>
 </body>
 </html>
