optimised image sizes

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <p>Open to all pro-live classes on Youtube for free.</p>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/community-1.jpg" alt="">
+                    <img src="./assets/courses/community-1.png" alt="">
                     <div class="course-text-ia">
                         <h4>Build an E-Commerce with ReactJS</h4>
                         <p>Hitesh Choudhary</p>
@@ -139,7 +139,7 @@
                     </div>
                 </div>
                 <div class="course">
-                    <img src="./assets/courses/62bf3edd6960793aeb3c0dbb.jpg" alt="">
+                    <img src="./assets/courses/62bf3edd6960793aeb3c0dbb.png" alt="">
                     <div class="course-text">
                         <h4>Job Guarantee Big Data Bootcamp</h4>
                         <p>Sudhanshu Kumar</p>
@@ -153,7 +153,7 @@
                     <p>Find your favourite courses in pocket-friendly ways.</p>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/affordable-1.jpg" alt="">
+                    <img src="./assets/courses/affordable-1.png" alt="">
                     <div class="course-text-ia">
                         <h4>Mastering DSA with Java</h4>
                         <p>Hitesh Choudhary</p>
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/affordable-2.jpg" alt="">
+                    <img src="./assets/courses/affordable-2.png" alt="">
                     <div class="course-text-ia">
                         <h4>Mastering DSA with C++</h4>
                         <p>Krish Naik</p>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="course-ia">
-                    <img src="./assets/courses/affordable-3.jpg" alt="">
+                    <img src="./assets/courses/affordable-3.png" alt="">
                     <div class="course-text-ia">
                         <h4>FullStack Django Developer</h4>
                         <p>Sudhanshu Kumar</p>
