--- a/index.html
+++ b/index.html
@@ -11,28 +11,53 @@
 <body>
     <header>
         <nav>
-            <a class="nav-item nav-link" href="https://ineuron.ai/courses" id="course-nav" target="_blank">Courses
-                <!-- <div class="course-container">
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                    <p>course</p>
-                </div> -->
-            </a>
-            <a class="nav-item nav-link" href="https://ineuron.ai/one-neuron" target="_blank">One Neuron</a>
-            <a class="nav-item nav-link" href="https://jobs.ineuron.ai/" target="_blank">Job Portal</a>
-            <a class="nav-item nav-link" href="https://internship.ineuron.ai/" target="_blank">Internship Portal</a>
-            <a class="nav-item nav-link" href="https://halloffame.ineuron.ai/" target="_blank">Hall of Fame</a>
-            <a class="nav-item nav-link" href="https://blog.ineuron.ai/" target="_blank">Blog</a>
-            <a class="nav-item nav-link" href="https://hackathon.ineuron.ai/neo" target="_blank">Hack-A-Thon</a>
-            <a class="nav-item nav-link" href="#"><input type="text" placeholder="What are we learning today?"></a>
-            <a class="nav-item" href="" target="_blank"><button class="btn-primary">Login / Register</button></a>
+            <ul class="nav-item" id="course-nav">
+                <a class="nav-link" href="https://ineuron.ai/courses" id="course-nav" target="_blank">Courses
+                    <img src="./assets/more-arrow.svg" alt="">
+                </a>
+                <div class="company-sub">
+                    <table class="company-table">
+                      <tbody><tr>
+                        <td><a href="#">Data Science</a></td>
+                        <td><a href="#">Web Development</a></td>
+                        <td><a href="#">Digital Marketing</a></td>
+                        <td><a href="#">Salesforce</a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="#">Big Data</a></td>
+                        <td><a href="#">Mobile Development</a></td>
+                        <td><a href="#">Cloud</a></td>
+                        <td><a href="#">Aptitude</a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="#">Data Analytics</a></td>
+                        <td><a href="#">Blockchain</a></td>
+                        <td><a href="#">DevOPS</a></td>
+                        <td><a href="#">Resume</a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="#">Data Structure</a></td>
+                        <td><a href="#">Cyber Security</a></td>
+                        <td><a href="#">IOT</a></td>
+                        <td><a href="#">K12</a></td>
+                      </tr>
+                      <tr>
+                        <td><a href="#">Database</a></td>
+                        <td><a href="#">Testing</a></td>
+                        <td><a href="#">AR / VR</a></td>
+                        <td><a href="#">RPA</a></td>
+                      </tr>
+                    </tbody></table>
+                  </div>
+            </ul>
+            <ul class="nav-item"><a class="nav-link" href="https://ineuron.ai/one-neuron" target="_blank">One Neuron</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="https://jobs.ineuron.ai/" target="_blank">Job Portal</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="https://internship.ineuron.ai/" target="_blank">Internship Portal</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="https://halloffame.ineuron.ai/" target="_blank">Hall of Fame</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="https://blog.ineuron.ai/" target="_blank">Blog</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="https://hackathon.ineuron.ai/neo" target="_blank">Hack-A-Thon</a></ul>
+            <ul class="nav-item"><a class="nav-link" href="#"><input type="text" placeholder="What are we learning today?"></a></ul>
+            <ul class="nav-item"><a href="" target="_blank"><button class="btn-primary">Login / Register</button></a></ul>
         </nav>
         <div>
             <a href="./index.html"><img src="./assets/ineuron-logo.png" alt="" class="logo"></a>
